Testing how github share works line 15 edit

--- a/index3.html
+++ b/index3.html
@@ -11,6 +11,8 @@
         border: dashed red 5px;
         padding: 10px 5px;
     }
+
+    <p>playing around to see if this works. Let me know if you can see this change to verify it went through<p>
         
 </style>
 </head>
